[metadata]
name = poms
version = v3_0_0
description = Production Operations Management Service
license = BSD 3-Clause License
classifiers = 
	Programming Language :: Python :: 2.7

[options]
#include_package_data = True
packages = find:
setup_requires = pytest-runner
zip_safe = False
install_requires = 
    psycopg2
    cherrypy
    sqlalchemy
    jinja2
    crontab
    futures
    requests
    paste
    prometheus_client
    dogpile.cache
    dowser

tests_require = 
    pytest 
    mock 

[options.package_data]
all = 
   .version
   *.cfg
   *.ini
poms.webservice = 
    *.ini
    templates/*.html 
    static/samples/*
    static/css/*.css 
    static/img/*png
    static/js/*.js
poms.submission_broker= 
    *.py
poms.poms_client=
    bin/*
    python/*.py
    test/*.py
poms.test=
    *.py
    *.ini

[options.packages.find]
include =
   poms
   poms.*
exclude = 
   poms.poms*
  

[aliases]
test=pytest

[tool:pytest]
addopts=-c tests/pytest.ini test
