[metadata]
name = poms
version = v4_1_2
description = Production Operations Management Service
license = BSD 3-Clause License
classifiers = 
	Programming Language :: Python :: 2.7

[options]
include_package_data = True
packages = 
   poms
   poms.poms_client
   poms.submission_broker
   poms.test
   poms.webservice
setup_requires = pytest-runner
zip_safe = False
install_requires = 
    psycopg2
    cherrypy
    sqlalchemy
    jinja2
    crontab
    futures
    requests
    prometheus_client

tests_require = 
    pytest 
    pytest_cov
    mock 
    coverage

[options.package_data]
poms=
   __init__.py
   *.py
   setup.cfg
poms.webservice = 
    *.ini
    templates/*.html 
    static/samples/*
    static/css/*.css 
    static/img/*png
    static/js/*.js
poms.submission_broker = 
    *.py
poms.poms_client =
    bin/*
    python/*.py
    test/*.py
poms.test=
    *.py
    *.ini

  

[aliases]
test=pytest

[tool:pytest]
addopts=-c tests/pytest.ini test
